--- a/index.html
+++ b/index.html
@@ -1880,7 +1880,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
 
           <!-- Arena below the log -->
           <style id="arenaStyles">
-            #arenaBoard{background:rgba(255,255,255,0.02); border-top:2px solid rgba(255,255,255,0.06); margin-top:8px}
+            #arenaBoard{background:rgba(255,255,255,0.02); border-top:2px solid rgba(255,255,255,0.06); margin-top:8px; --arena-box-min-height:540px; --arena-sprite-height:192px}
             #arenaBoard .pill{display:flex;align-items:center;gap:6px;padding:4px 8px;border-radius:8px;background:#0b0b0b}
             #arenaBoard .status-chip{background:#0b0b0b}
             #arenaBoard img{image-rendering:pixelated}
@@ -1889,15 +1889,15 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
           </style>
 
             <div id="arenaBoard" style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px; padding: 16px; border-top: 2px solid rgba(255,255,255,0.1);">
-              <div id="simPlayerArena" style="background: rgba(0,255,51,0.05); border: 1px solid #0a5; border-radius: 12px; padding: 12px; position: relative; min-height: 180px;">
+            <div id="simPlayerArena" style="background: rgba(0,255,51,0.05); border: 1px solid #0a5; border-radius: 12px; padding: 12px; position: relative; min-height: var(--arena-box-min-height);">
                 <div style="color:#ffd; font-weight:700; font-size:14px; margin-bottom:6px;">Current Status</div>
                 <div id="arenaPlayerStatuses" style="display:flex;gap:6px;flex-wrap:wrap;justify-content:center;margin:6px 0 8px 0;"></div>
                 <div id="arenaPlayerEventOverlay" class="arena-overlay" style="position:absolute; left: 50%; transform: translateX(-50%); top: 8px; background: rgba(0,255,51,0.1); border:1px solid #0f3; color:#0f3;">
                   <img id="arenaPlayerEventIcon" src="assets/placeholder.png">
                   <span id="arenaPlayerEventText"></span>
                 </div>
-                <div style="display:flex; justify-content:center; align-items:center; height:96px;">
-                  <img id="arenaPlayerSprite" src="sprites/1.png" alt="player" style="height:96px; width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #0f3);">
+                <div style="display:flex; justify-content:center; align-items:center; height: calc(var(--arena-sprite-height) + 32px);">
+                  <img id="arenaPlayerSprite" src="sprites/1.png" alt="player" style="height:var(--arena-sprite-height); width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #0f3);">
                 </div>
                 <div style="display:flex; gap:10px; justify-content:center; margin-top:6px;">
                   <div class="pill"><img src="assets/health.png" style="width:16px;height:16px;"><span id="arenaPlayerHP">10</span></div>
@@ -1905,15 +1905,15 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
                   <div class="pill"><img src="assets/speed.png" style="width:16px;height:16px;"><span id="arenaPlayerSpeed">0</span></div>
                 </div>
               </div>
-              <div id="simOpponentArena" style="background: rgba(255,51,51,0.05); border: 1px solid #a33; border-radius: 12px; padding: 12px; position: relative; min-height: 180px;">
+            <div id="simOpponentArena" style="background: rgba(255,51,51,0.05); border: 1px solid #a33; border-radius: 12px; padding: 12px; position: relative; min-height: var(--arena-box-min-height);">
                 <div style="color:#ffd; font-weight:700; font-size:14px; margin-bottom:6px; text-align:right;">Current Status</div>
                 <div id="arenaOpponentStatuses" style="display:flex;gap:6px;flex-wrap:wrap;justify-content:center;margin:6px 0 8px 0;"></div>
                 <div id="arenaOpponentEventOverlay" class="arena-overlay" style="position:absolute; left: 50%; transform: translateX(-50%); top: 8px; background: rgba(255,51,51,0.1); border:1px solid #f33; color:#f33;">
                   <img id="arenaOpponentEventIcon" src="assets/placeholder.png">
                   <span id="arenaOpponentEventText"></span>
                 </div>
-                <div style="display:flex; justify-content:center; align-items:center; height:96px;">
-                  <img id="arenaOpponentSprite" src="sprites/2.png" alt="opponent" style="height:96px; width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #f33);">
+                <div style="display:flex; justify-content:center; align-items:center; height: calc(var(--arena-sprite-height) + 32px);">
+                  <img id="arenaOpponentSprite" src="sprites/2.png" alt="opponent" style="height:var(--arena-sprite-height); width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #f33);">
                 </div>
                 <div style="display:flex; gap:10px; justify-content:center; margin-top:6px;">
                   <div class="pill"><img src="assets/health.png" style="width:16px;height:16px;"><span id="arenaOpponentHP">10</span></div>
