--- a/index.html
+++ b/index.html
@@ -1725,10 +1725,10 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
     </section>
     <section class="center" id="simulationTab" style="flex:1; display:none; flex-direction:column; min-height:0; background: #000;">
       <!-- Three-Pane Layout: Fighter Cards | Event Log | Loadout Tray -->
-      <div class="sim-three-pane" style="display: grid; grid-template-columns: 320px 1fr 320px; gap: 12px; height: 100%; min-height: 0; padding: 12px;">
+      <div class="sim-three-pane" style="display: grid; grid-template-columns: 0 1fr 380px; gap: 12px; height: 100%; min-height: 0; padding: 12px;">
         
         <!-- LEFT PANE: Sticky Summary (Fighter Cards) -->
-        <div class="fighter-summary-pane" style="display: flex; flex-direction: column; gap: 16px; background: #0a0a0a; border: 2px solid #333; border-radius: 12px; padding: 16px; overflow-y: auto; position: sticky; top: 0; height: fit-content; max-height: 100vh;">
+        <div class="fighter-summary-pane" style="display: none; flex-direction: column; gap: 16px; background: #0a0a0a; border: 2px solid #333; border-radius: 12px; padding: 16px; overflow-y: auto; position: sticky; top: 0; height: fit-content; max-height: 100vh;">
           
           <!-- Pinned Key Numbers -->
           <div id="pinnedMetrics" style="background: rgba(0,50,20,0.8); border: 2px solid #0a5; border-radius: 8px; padding: 12px; margin-bottom: 8px;">
@@ -1902,15 +1902,19 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
             #arenaBoard img{image-rendering:pixelated}
             .arena-overlay{display:flex;align-items:center;gap:6px;padding:4px 8px;border-radius:8px;font-weight:700;visibility:hidden;box-shadow:0 2px 10px rgba(0,0,0,.35)}
             .arena-overlay img{width:16px;height:16px}
+            /* Hide floating event overlays (redundant with action captions) */
+            .arena-overlay{display:none !important}
             .delta-panel{min-width:110px; min-height:60px; border:1px solid rgba(255,255,255,0.1); border-radius:10px; background:rgba(0,0,0,0.35); padding:8px; color:#ddd; display:flex; flex-direction:column; gap:4px}
             .delta-row{display:flex; align-items:center; gap:6px; font-size:13px;}
             .delta-row .icon{width:16px; height:16px; display:inline-block}
             .delta-row.positive{color:#0f3}
             .delta-row.negative{color:#f44}
             /* Compact, always-on status icon bar */
-            .status-bar{display:flex; gap:10px; align-items:center; justify-content:flex-start; margin:4px 0 6px}
-            .status-bar .s{display:flex; align-items:center; gap:4px; color:#ccc; font-size:12px}
-            .status-bar .s img{width:16px; height:16px; image-rendering:pixelated}
+            .status-bar{display:flex; gap:14px; align-items:center; justify-content:space-between; margin:4px 0 10px; width:100%}
+            .status-bar .s{display:flex; align-items:center; gap:6px; color:#ddd; font-size:14px}
+            .status-bar .s img{width:18px; height:18px; image-rendering:pixelated}
+            /* Bigger action caption text */
+            #arenaPlayerAction, #arenaOpponentAction{ font-size: 15px; }
             /* Hide legacy left cards in simulation view */
             #simulationTab .fighter-summary-pane .fighter-card, #simulationTab #pinnedMetrics{display:none !important}
             /* Hide old chip rows in arena */
@@ -1927,8 +1931,8 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
                   <span id="arenaPlayerEventText"></span>
                 </div>
                 <div style="display:flex; justify-content:center; align-items:center; gap:16px; height: calc(var(--arena-sprite-height) + 32px);">
-                  <div id="arenaPlayerDelta" class="delta-panel" aria-label="Player changes"></div>
                   <img id="arenaPlayerSprite" src="sprites/1.png" alt="player" style="height:var(--arena-sprite-height); width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #0f3);">
+                  <div id="arenaPlayerDelta" class="delta-panel" aria-label="Player changes"></div>
                 </div>
                 <div style="display:flex; gap:10px; justify-content:center; margin-top:6px;">
                   <div class="pill"><img src="assets/health.png" style="width:16px;height:16px;"><span id="arenaPlayerHP">10</span></div>
@@ -1950,8 +1954,8 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
                   <span id="arenaOpponentEventText"></span>
                 </div>
                 <div style="display:flex; justify-content:center; align-items:center; gap:16px; height: calc(var(--arena-sprite-height) + 32px);">
-                  <img id="arenaOpponentSprite" src="sprites/2.png" alt="opponent" style="height:var(--arena-sprite-height); width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #f33);">
                   <div id="arenaOpponentDelta" class="delta-panel" aria-label="Opponent changes"></div>
+                  <img id="arenaOpponentSprite" src="sprites/2.png" alt="opponent" style="height:var(--arena-sprite-height); width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #f33);">
                 </div>
                 <div style="display:flex; gap:10px; justify-content:center; margin-top:6px;">
                   <div class="pill"><img src="assets/health.png" style="width:16px;height:16px;"><span id="arenaOpponentHP">10</span></div>
