Ensure center Event Log pane sits above and in column 2 (grid-column:2; z-index:2) to avoid right tray overlap

--- a/index.html
+++ b/index.html
@@ -1842,7 +1842,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
         </div>
 
         <!-- MIDDLE PANE: Event Log -->
-        <div class="event-log-pane" style="display: flex; flex-direction: column; background: #0a0a0a; border: 2px solid #333; border-radius: 12px; overflow: hidden; min-height: 0;">
+        <div class="event-log-pane" style="display: flex; flex-direction: column; background: #0a0a0a; border: 2px solid #333; border-radius: 12px; overflow: hidden; min-height: 0; grid-column: 2; position: relative; z-index: 2;">
           
           <!-- Log Header -->
           <div style="background: linear-gradient(90deg, #333 0%, #555 100%); padding: 12px 16px; border-bottom: 2px solid #333; flex-shrink: 0;">
