Add START BATTLE button to Event Log header and wire it to simulation; keep hidden legacy button but ensure top button works

--- a/index.html
+++ b/index.html
@@ -1855,6 +1855,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
                   Hide noise
                 </label>
                 <div id="battleStatus" style="color: #ccc; font-size: 12px; font-weight: 600;">Ready</div>
+                <button id="btnSimulateTop" type="button" title="Run a battle" style="background:#0f3;color:#000;border:none;border-radius:6px;padding:8px 12px;cursor:pointer;font-size:12px;font-weight:700;">START BATTLE</button>
               </div>
             </div>
           </div>
