--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
         background: linear-gradient(135deg, #1a1f2e 0%, #16202d 100%); 
         padding: 16px 20px; 
         border-bottom: 2px solid #f33;
-        flex-shrink: 0;
+        flex-shrink: 0; display:none;
       ">
         <!-- Top Row: Search + View Controls -->
         <div style="display: flex; gap: 12px; align-items: center; margin-bottom: 12px; flex-wrap: wrap;">
