Bring back randomizer: add Random Build and Random Enemy buttons in Compendium tools bar; wired to existing app.js handlers

--- a/index.html
+++ b/index.html
@@ -1250,6 +1250,11 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
               font-size: 14px;
             ">
             <div id="searchChips" style="display: flex; gap: 4px; flex-wrap: wrap;"></div>
+      <!-- Compendium Tools (Randomizer) -->
+      <div id="compendiumTools" style="display:flex; gap:8px; align-items:center; padding:8px 12px; border-bottom:1px solid #333; background:#0a0a0a;">
+        <button id="randBuildBtn" type="button" title="Randomize Player loadout" style="background:#f33;color:#000;border:none;border-radius:6px;padding:6px 10px;cursor:pointer;font-size:12px;font-weight:600;">Random Build</button>
+        <button id="randEnemyBtn" type="button" title="Randomize Opponent loadout" style="background:#f33;color:#000;border:none;border-radius:6px;padding:6px 10px;cursor:pointer;font-size:12px;font-weight:600;">Random Enemy</button>
+      </div>
           </div>
 
           
